Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2511] fixed compilation on FreeBSD with IPv6 due to FD_SETSIZE being undefined (asaveljevs)
 - [ZBX-2503] fixed server and proxy crash with Oracle in cases DBUser and DBPassword parameters were not specified (asaveljevs)
 - [ZBX-2074] fixed wed scenarios showing incorrect speed (Vedmak)
 - [ZBX-2486] fixed syntax error in 1.6 PostgreSQL upgrade script (asaveljevs)
 - [ZBX-2336] fixed 'system.hostname' being empty on Windows hosts with names longer than 15 characters (asaveljevs)
 - [ZBX-2251] removed error displaying in area of graphics (Maxim Andruhovich / AM)
 - [ZBX-1327] page is now remembered correctly after performing actions (Vedmak)
 - [ZBX-1211] fixed cell spacing in empty cells (Maxim Andruhovich / AM)
 - [ZBX-2372] fixed bug with date in local language, now short and long month names shown correctly (Andruhovich Maxim / AM)
 - [ZBX-2385] added macro {TRIGGER.PROBLEM.EVENTS.PROBLEM.UNACK} (Vedmak)
 - [ZBX-2040] annoying "double check" popups removed from copy to & mass update actions of items and triggers (Maxim Andruhovich / AM)
 - [ZBX-2482] fixes in chart graphs avg calc (Aly)
 - [ZBX-1477] fixed moving screen elements with spans (Vedmak)
 - [ZBXNEXT-279] added links to parent elements for item and trigger form (Vedmak)
 - [ZBX-2376] port parameter to tcp and tcp_perf is now mandatory (asaveljevs)
 - [ZBX-2376] added ldap, ldap_perf, ntp, and ntp_perf simple checks (asaveljevs)
 - [ZBX-808] renamed service.ntp parameter of net.tcp.service{.perf} to ntp (asaveljevs)
 - [ZBX-2011] plain ASCII subjects are no longer base64-encoded, fixes issues with email to SMS gateways (asaveljevs)
 - [ZBXNEXT-319] multirow inserts are now used for PostgreSQL 8.2 and higher (asaveljevs)