@@ -400,7 +400,7 @@ insert into help_items values (5,'zabbix[history_uint]','Number of values stored
 insert into help_items values (5,'zabbix[items]','Number of items in Zabbix database.');
 insert into help_items values (5,'zabbix[items_unsupported]','Number of unsupported items in Zabbix database.');
 insert into help_items values (5,'zabbix[log]','Stores warning and error messages generated by Zabbix server.');
-insert into help_items values (5,'zabbix[queue]','Number of items in the queue.');
+insert into help_items values (5,'zabbix[queue&lt;,from&gt;&lt;,to&gt;]','Number of items in the queue which are delayed by from to to seconds, inclusive.');
 insert into help_items values (5,'zabbix[trends]','Number of values stored in table TRENDS.');
 insert into help_items values (5,'zabbix[trends_uint]','Number of values stored in table TRENDS_UINT.');
 insert into help_items values (5,'zabbix[triggers]','Number of triggers in Zabbix database.');
