@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-396] added optional parameters 'from' and 'to' to zabbix[queue] (asaveljevs)
  - [ZBX-2511] fixed compilation on FreeBSD with IPv6 due to FD_SETSIZE being undefined (asaveljevs)
  - [ZBX-2503] fixed server and proxy crash with Oracle in cases DBUser and DBPassword parameters were not specified (asaveljevs)
  - [ZBX-2074] fixed wed scenarios showing incorrect speed (Vedmak)
